--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "konva": "^9.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
