--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
